K8s/auth-server-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
        - name: auth-server
          image: sizhewang0916/sit323-task-calculator:auth
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-server
spec:
  selector:
    app: auth-server
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
